tipos de formulario

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejericios Html</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Ejericios Html</title>
+	</head>
+	<body>
+		<main>
+			<section>
+				<button type="button">
+					<a href="formularios-html/">FORMULARIOS</a>
+				</button>
+			</section>
+		</main>
+	</body>
 </html>
