etiquetas mas usadas del formulario

--- a/formularios-html/index.html
+++ b/formularios-html/index.html
@@ -32,9 +32,11 @@
 		</section>
 		<!-- Formulario de Registro -->
 		<section class="form-contact">
-			<a href="04-formulario-de-satisfaccion.html"
-				>FORMULARIO DE SATISFACCIÓN</a
-			>
+			<a href="04-formulario-de-satisfaccion.html">
+				FORMULARIO DE SATISFACCIÓN
+			</a>
 		</section>
+
+		<a class="volver" href="../index.html">VOLVER</a>
 	</body>
 </html>
