--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="main.css" />
 		<title>Ejericios Html</title>
 	</head>
 	<body>
-		<main>
-			<section>
-				<button type="button">
-					<a href="formularios-html/">FORMULARIOS</a>
-				</button>
-			</section>
+		<main class="container">
+			<h1>FORMULARIO y PLANTILLAS WEB</h1>
+			<div class="container-field">
+				<section>
+					<button type="button">
+						<a href="formularios-html/">FORMULARIOS</a>
+					</button>
+				</section>
+				<section>
+					<button type="button">
+						<a href="etiquetas-form.html">ETIQUETAS</a>
+					</button>
+				</section>
+			</div>
 		</main>
 	</body>
 </html>
