--- a/etiquetas-form.html
+++ b/etiquetas-form.html
@@ -107,6 +107,15 @@
 				<input type="month" name="" id="" />
 				<hr />
 
+				<label for="description">Escribe tu consulta</label>
+				<br />
+				<textarea
+					name="description"
+					id="description"
+					cols="30"
+					rows="10"></textarea>
+				<hr />
+
 				<!-- Botones  -->
 				<input type="submit" value="Enviar" />
 				<input
