--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 		<title>Ejericios Html</title>
 	</head>
 	<body>
@@ -18,6 +18,11 @@
 				<section>
 					<button type="button">
 						<a href="etiquetas-form.html">ETIQUETAS</a>
+					</button>
+				</section>
+				<section>
+					<button type="button">
+						<a href="ejercicios-form.html">EJERCICIOS</a>
 					</button>
 				</section>
 			</div>
