--- a/ejercicios/02-formulario-pedido.html
+++ b/ejercicios/02-formulario-pedido.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Formulario de Pedido</title>
+		<link rel="stylesheet" href="css/02-pedido.css" />
 	</head>
 	<body>
 		<div class="container">
