Lista y grupos de formularios

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 				</section>
 				<section>
 					<button type="button">
+						<a href="etiquetas-grupos-form.html">GRUPOS DE ETIQUETAS</a>
+					</button>
+				</section>
+				<section>
+					<button type="button">
 						<a href="ejercicios-form.html">EJERCICIOS</a>
 					</button>
 				</section>
