Grupos y listas de formulario

--- a/ejercicios-form.html
+++ b/ejercicios-form.html
@@ -10,7 +10,7 @@
 		<h1>Lista de ejercicios</h1>
 		<main class="container">
 			<!-- Primer ejercicio -->
-			<div class="comun uno">
+			<section class="comun uno">
 				<h2>Ejercicio 1</h2>
 				<p>Crea una formulario de contacto con los campos:</p>
 				<ul>
@@ -25,26 +25,36 @@
 				<a class="button" href="ejercicios/01-formulario-contacto.html"
 					>Ver ejercicio</a
 				>
-			</div>
+			</section>
 
 			<!-- Segundo ejercicio -->
-			<div class="comun dos">
+			<section class="comun dos">
 				<h2>Ejercicio 2</h2>
 				<p>Crea un formulario que te permita realizar un pedido:</p>
 				<ul>
 					<li>Nombre</li>
 					<li>Producto</li>
 					<li>Cantidad</li>
-					<li>Contraseña</li>
+					<li>Direccion de envio</li>
+					<li>Teléfono</li>
+					<li>
+						Método de pago:
+						<br />
+						Efectivo
+						<br />
+						Tarjeta
+						<br />
+						Bizum
+					</li>
 				</ul>
 
 				<a class="button" href="ejercicios/02-formulario-pedido.html"
 					>Ver ejercicio</a
 				>
-			</div>
+			</section>
 
 			<!-- Tercer ejercicio -->
-			<div class="comun tres">
+			<section class="comun tres">
 				<h2>Ejercicio 3</h2>
 				<p>Crea una página de login:</p>
 				<ul>
@@ -55,7 +65,44 @@
 				<a class="button" href="ejercicios/03-formulario-login.html"
 					>Ver ejercicio</a
 				>
-			</div>
+			</section>
+
+			<!-- Cuarto ejercicio -->
+			<section class="comun cuatro">
+				<h2>Ejercicio 4</h2>
+				<p>Divide el ejercicio 1 de grupos:</p>
+				<ul>
+					<span>Grupo 1</span>
+					<li>Nombre</li>
+					<li>Apellido</li>
+					<br />
+					<span>Grupo 2</span>
+					<li>E-mail</li>
+					<li>Teléfono</li>
+					<br />
+					<span>Grupo 3</span>
+					<li>Asunto</li>
+					<li>Mensaje</li>
+				</ul>
+
+				<a class="button" href="ejercicios/04-formulario-contacto-grupos.html"
+					>Ver ejercicio</a
+				>
+			</section>
+			<!-- Quinto ejercicio -->
+			<section class="comun cinco">
+				<h2>Ejercicio 5</h2>
+				<p>Partiendo del ejercicio 2:</p>
+				<ul>
+					<li>Crea una lista para método de pago</li>
+					<li>Crea una lista para elegir entre 5 productos</li>
+					<li>Crea una lista para la ciudad de envio</li>
+				</ul>
+
+				<a class="button" href="ejercicios/05-formulario-pedido-grupos.html"
+					>Ver ejercicio</a
+				>
+			</section>
 		</main>
 	</body>
 </html>
