--- a/ejercicios/02-formulario-pedido.html
+++ b/ejercicios/02-formulario-pedido.html
@@ -28,7 +28,7 @@
 				<input type="radio" id="metodo_pago" name="metodo_pago" required />
 				<label for="metodo_pago">Bizum:</label>
 				<br /><br />
-				<input type="submit" value="Realizar Pedido" />
+				<input type="submit" value="Realizar Pedido" class="btnPedido" />
 			</form>
 		</div>
 	</body>
