--- a/formularios-html/index.html
+++ b/formularios-html/index.html
@@ -7,36 +7,39 @@
 		<link rel="stylesheet" href="css/00-index.css" />
 	</head>
 	<body>
-		<section>
-			<p>
-				Un formulario es un documento físico o digital diseñado para recopilar
-				información de manera estructurada. Está compuesto por casillas o campos
-				donde los usuarios pueden ingresar datos específicos. Los formularios
-				pueden variar en formato y extensión, pero su objetivo es solicitar
-				información a los usuarios o iniciar relaciones comerciales o de
-				servicios. Pueden ser físicos (rellenados manualmente) o digitales
-				(creados y completados en línea).
-			</p>
-		</section>
-		<!-- Formulario de Registro -->
-		<section class="form-contact">
-			<a href="01-formulario-de-contacto.html">FORMULARIO DE CONTACTO</a>
-		</section>
-		<!-- Formulario de Registro -->
-		<section class="form-contact">
-			<a href="02-formulario-de-suscripcion.html">FORMULARIO DE SUSCRIPCIÓN</a>
-		</section>
-		<!-- Formulario de Registro -->
-		<section class="form-contact">
-			<a href="03-formulario-de-compra.html">FORMULARIO DE COMPRA</a>
-		</section>
-		<!-- Formulario de Registro -->
-		<section class="form-contact">
-			<a href="04-formulario-de-satisfaccion.html">
-				FORMULARIO DE SATISFACCIÓN
-			</a>
-		</section>
-
-		<a class="volver" href="../index.html">VOLVER</a>
+		<main class="container">
+			<section>
+				<p>
+					Un formulario es un documento físico o digital diseñado para recopilar
+					información de manera estructurada. Está compuesto por casillas o
+					campos donde los usuarios pueden ingresar datos específicos. Los
+					formularios pueden variar en formato y extensión, pero su objetivo es
+					solicitar información a los usuarios o iniciar relaciones comerciales
+					o de servicios. Pueden ser físicos (rellenados manualmente) o
+					digitales (creados y completados en línea).
+				</p>
+			</section>
+			<!-- Formulario de Registro -->
+			<section class="form-contact">
+				<a href="01-formulario-de-contacto.html">FORMULARIO DE CONTACTO</a>
+			</section>
+			<!-- Formulario de Suscripcion -->
+			<section class="form-contact">
+				<a href="02-formulario-de-suscripcion.html"
+					>FORMULARIO DE SUSCRIPCIÓN</a
+				>
+			</section>
+			<!-- Formulario de Registro -->
+			<section class="form-contact">
+				<a href="03-formulario-de-compra.html">FORMULARIO DE COMPRA</a>
+			</section>
+			<!-- Formulario de Registro -->
+			<section class="form-contact">
+				<a href="04-formulario-de-satisfaccion.html">
+					FORMULARIO DE SATISFACCIÓN
+				</a>
+			</section>
+			<a class="volver" href="../index.html">VOLVER</a>
+		</main>
 	</body>
 </html>
