Añadido examen de formulario y tipo test

--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -22,9 +22,7 @@
 					<li>Mensaje</li>
 				</ul>
 
-				<a class="button" href="ejercicios/01-formulario-contacto.html"
-					>Ver ejercicio</a
-				>
+				<a class="button" href="01-formulario-contacto.html">Ver ejercicio</a>
 			</section>
 
 			<!-- Segundo ejercicio -->
@@ -48,9 +46,7 @@
 					</li>
 				</ul>
 
-				<a class="button" href="ejercicios/02-formulario-pedido.html"
-					>Ver ejercicio</a
-				>
+				<a class="button" href="02-formulario-pedido.html">Ver ejercicio</a>
 			</section>
 
 			<!-- Tercer ejercicio -->
@@ -62,9 +58,7 @@
 					<li>Contraseña</li>
 				</ul>
 
-				<a class="button" href="ejercicios/03-formulario-login.html"
-					>Ver ejercicio</a
-				>
+				<a class="button" href="03-formulario-login.html">Ver ejercicio</a>
 			</section>
 
 			<!-- Cuarto ejercicio -->
@@ -85,7 +79,7 @@
 					<li>Mensaje</li>
 				</ul>
 
-				<a class="button" href="ejercicios/04-formulario-contacto-grupos.html"
+				<a class="button" href="04-formulario-contacto-grupos.html"
 					>Ver ejercicio</a
 				>
 			</section>
@@ -99,7 +93,7 @@
 					<li>Crea una lista para la ciudad de envio</li>
 				</ul>
 
-				<a class="button" href="ejercicios/05-formulario-pedido-grupos.html"
+				<a class="button" href="05-formulario-pedido-grupos.html"
 					>Ver ejercicio</a
 				>
 			</section>
