--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="container-field">
 				<section>
 					<button type="button">
-						<a href="formularios-html/">FORMULARIOS</a>
+						<a href="formularios/">FORMULARIOS</a>
 					</button>
 				</section>
 				<section>
@@ -27,7 +27,12 @@
 				</section>
 				<section>
 					<button type="button">
-						<a href="ejercicios-form.html">EJERCICIOS</a>
+						<a href="ejercicios/">EJERCICIOS</a>
+					</button>
+				</section>
+				<section>
+					<button type="button">
+						<a href="examen/">EXAMEN</a>
 					</button>
 				</section>
 			</div>
