--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</section>
 				<section>
 					<button type="button">
-						<a href="examen/">EXAMEN</a>
+						<a hidden href="examen/">EXAMEN</a>
 					</button>
 				</section>
 			</div>
