--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</button>
 				</section>
 				<section>
-					<button type="button">
+					<button type="button" class="btnexamen">
 						<a hidden href="examen/">EXAMEN</a>
 					</button>
 				</section>
