--- a/examen/index.html
+++ b/examen/index.html
@@ -78,6 +78,9 @@
 			<a href="examen.html" target="_blank" rel="noopener noreferrer" class="btnEnviar">
 				Ver ejercicio
 			</a>
+			<a href="resultados/" target="_blank" rel="noopener noreferrer" class="btnEnviar">
+				Ver resultados
+			</a>
 		</div>
 	</main>
 	<script src="main.js"></script>
