--- a/examen/index.html
+++ b/examen/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -79,7 +79,7 @@
 				Ver ejercicio
 			</a>
 			<a href="resultados/" target="_blank" rel="noopener noreferrer" class="btnEnviar">
-				Ver resultados
+				Ver examenes
 			</a>
 		</div>
 	</main>
