--- a/examen/index.html
+++ b/examen/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -78,8 +78,8 @@ a<!DOCTYPE html>
 			<a href="examen.html" target="_blank" rel="noopener noreferrer" class="btnEnviar">
 				Ver ejercicio
 			</a>
-			<a href="resultados/" target="_blank" rel="noopener noreferrer" class="btnEnviar">
-				Ver examenes
+			<a href="/resultados" target="_blank" rel="noopener noreferrer" class="btnEnviar">
+				Ver exa
 			</a>
 		</div>
 	</main>
