--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="container-field">
 				<section>
 					<button type="button">
-						<a href="/formularios">FORMULARIOS</a>
+						<a href="formularios">FORMULARIOS</a>
 					</button>
 				</section>
 				<section>
@@ -27,12 +27,12 @@
 				</section>
 				<section>
 					<button type="button">
-						<a href="/ejercicios">EJERCICIOS</a>
+						<a href="ejercicios">EJERCICIOS</a>
 					</button>
 				</section>
 				<section>
 					<button type="button" class="btnexamen">
-						<a href="/examen">EXAMEN</a>
+						<a href="examen">EXAMEN</a>
 					</button>
 				</section>
 			</div>
