--- a/examen/index.html
+++ b/examen/index.html
@@ -78,8 +78,8 @@
 			<a href="examen.html" target="_blank" rel="noopener noreferrer" class="btnEnviar">
 				Ver ejercicio
 			</a>
-			<a href="/resultados" target="_blank" rel="noopener noreferrer" class="btnEnviar">
-				Ver exa
+			<a href="resultados/" target="_blank" rel="noopener noreferrer" class="btnEnviar">
+				Ver resultados
 			</a>
 		</div>
 	</main>
